Fixed alignment for JavaCalculator page

--- a/CSS/javaStyles.css
+++ b/CSS/javaStyles.css
@@ -84,7 +84,7 @@ a:hover {
 	color: #42e8f4;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
 	h1 {
 		font-size: 1.5em;
 	}
@@ -93,16 +93,18 @@ a:hover {
 		font-size: 1em;
 	}
 
-	ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-	}
+  ul {
+    list-style-type: none;
+    display: table;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+  }
 
 	ul li {
-		margin: 1em;
+		margin-bottom: 1.5em;
 		margin-left: 0em;
+		margin-right: 0px;
 		padding: 1em;
 	}
 }
